--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "main": "lib/table",
   "dependencies": {
+    "classnames": "^2.2.3",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
